--- a/pages/calculos/calcular_textura.html
+++ b/pages/calculos/calcular_textura.html
@@ -65,121 +65,7 @@
 </style> -->
 
   <!-- Navbar -->
-  <div class="container position-sticky z-index-sticky top-0">
-    <div class="row">
-      <div class="col-12">
-        <nav
-          class="navbar navbar-expand-lg  blur border-radius-xl top-0 z-index-fixed shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
-          <div class="container-fluid px-0">
-            <a class="navbar-brand font-weight-bolder ms-sm-3" href="../../index.html" rel="tooltip"
-              title="Designed and Coded by Creative Tim" data-placement="bottom">
-              <span class="text-xxl">  <span class="text-dark font-weight-bold"><span class="text-success">Eco</span>suelos</span>
-            </a>
-            <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse"
-              data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false"
-              aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon mt-2">
-                <span class="navbar-toggler-bar bar1"></span>
-                <span class="navbar-toggler-bar bar2"></span>
-                <span class="navbar-toggler-bar bar3"></span>
-              </span>
-            </button>
-            <div class="collapse navbar-collapse pt-3 pb-2 py-lg-0 w-100" id="navigation">
-              <ul class="navbar-nav navbar-nav-hover ms-auto">
-                <li class="nav-item dropdown dropdown-hover mx-2">
-                  <a href="../../index.html" class="nav-link ps-2 d-flex cursor-pointer align-items-center"
-                    id="dropdownMenuPages"   aria-expanded="false">
-                    <i class="material-icons opacity-6 me-2 text-md">home</i>
-                    Inicio
-                  </a>
-                </li>
-
-                <li class="nav-item dropdown dropdown-hover mx-2">
-                  <a href="../suelo.html" class="nav-link ps-2 d-flex cursor-pointer align-items-center"
-                    id="dropdownMenuPages"   aria-expanded="false">
-                    <i class="material-icons opacity-6 me-2 text-md"> </i>
-                    Suelo
-                  </a>
-                </li>
-
-                <li class="nav-item dropdown dropdown-hover mx-2">
-                  <a href="../clases.html" class="nav-link ps-2 d-flex cursor-pointer align-items-center"
-                    id="dropdownMenuPages"   aria-expanded="false">
-                    <i class="material-icons opacity-6 me-2 text-md"> </i>
-                    Clases
-                  </a>
-                </li>
-
-                <li class="nav-item dropdown dropdown-hover mx-2">
-                  <a href="../subclases.html" class="nav-link ps-2 d-flex cursor-pointer align-items-center"
-                    id="dropdownMenuPages"   aria-expanded="false">
-                    <i class="material-icons opacity-6 me-2 text-md"> </i>
-                    Subclases
-                  </a>
-                </li>
-
-                <li class="nav-item dropdown dropdown-hover mx-2">
-                  <a class="nav-link ps-2 d-flex cursor-pointer align-items-center" id="dropdownMenuDocs"
-                    data-bs-toggle="dropdown" aria-expanded="false">
-                    <i class="material-icons opacity-6 me-2 text-md"> </i>
-                    Grupo de Capacidad
-                    <img src="../../assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-auto ms-md-2">
-                  </a>
-                  <ul
-                    class="dropdown-menu dropdown-menu-end dropdown-menu-animation dropdown-md dropdown-md-responsive mt-0 mt-lg-3 p-3 border-radius-lg"
-                    aria-labelledby="dropdownMenuDocs">
-                    <div class="d-none d-lg-block">
-                      <ul class="list-group">
-                        <li class="nav-item list-group-item border-0 p-0">
-                          <a href="../grupo1.html" class="dropdown-item py-2 ps-3 border-radius-md">
-                            <h6
-                              class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">
-                              Grupo 1</h6>
-                            <!-- <span class="text-sm">All about overview, quick start, license and contents</span> -->
-                          </a>
-                        </li>
-                        <li class="nav-item list-group-item border-0 p-0">
-                          <a href="../grupo2.html" class="dropdown-item py-2 ps-3 border-radius-md">
-                            <h6
-                              class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">
-                              Grupo 2</h6>
-                            <!-- <span class="text-sm">All about overview, quick start, license and contents</span> -->
-                          </a>
-                        </li>
-                        <li class="nav-item list-group-item border-0 p-0">
-                          <a href="../grupo3.html" class="dropdown-item py-2 ps-3 border-radius-md">
-                            <h6
-                              class="dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center p-0">
-                              Grupo 3</h6>
-                            <!-- <span class="text-sm">All about overview, quick start, license and contents</span> -->
-                          </a>
-                        </li>
-
-                      </ul>
-                    </div>
-
-                  </ul>
-                </li>
-                <li class="nav-item ms-lg-auto">
-                  <a class="nav-link nav-link-icon me-2" href="../../pages/calcular.html">
-                    <p class="d-inline text-sm z-index-1 font-weight-bold" data-bs-toggle="tooltip"
-                      data-bs-placement="bottom" title="Calcular">Calcular Proceso</p>
-                  </a>
-                </li>
-                <li class="nav-item my-auto ms-3 ms-lg-0">
-
-                  <a href="https://www.creative-tim.com/product/material-kit-pro"
-                    class="btn btn-sm  bg-gradient-success  mb-0 me-1 mt-2 mt-md-0">Ingresar</a>
-
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-        <!-- End Navbar -->
-      </div>
-    </div>
-  </div>
+  <div id="nav"></div>
   <!-- fin Navbar -->
 
   <div class="card1 card-body mx-3 mx-md-8 mt-7 opacity-9 mb-4">
@@ -546,6 +432,7 @@
   <script src="../../assets/js/config.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/4.2.2/intro.min.js"></script>
   <script src="../../assets/js/instrucciones/intro_textura.js"></script>
+  <script src="../../assets/js/include.js"></script>
   <script>
     // Función para mostrar el div durante 4 segundos
     function mostrarDivTemporal() {
