--- a/productivacbc/productivacbc.html
+++ b/productivacbc/productivacbc.html
@@ -66,7 +66,7 @@
       .pasos{
         position: absolute; 
         z-index: 9;
-        border: 2px solid rgb(255, 0, 0);
+        border: 2px solid rgb(0, 0, 0);
       }
 
       .paso1{top: 232px; left: 89px; width: 725px; height: 60px;}
@@ -134,7 +134,7 @@
         </div>
 
         <!-- hoja 3 -->
-        <div class=" base mt-2">
+        <div class="card base mt-2">
           <img src="../assets/doc/EP-f023-01-3.png" alt="">
 
           <div id="intro12" class="pasos paso12" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="información..."></div>
