--- a/pages/calcular.html
+++ b/pages/calcular.html
@@ -487,6 +487,7 @@
   <script src="../assets/js/calculos/calcular-proceso.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/4.2.2/intro.min.js"></script>
   <script src="../assets/js/instrucciones/instrucciones.js"></script>
+  <script src="../assets/js/include/include_calcular.js"></script>
 
 
 </body>
