--- a/pages/calculos/calcular_fertilidad.html
+++ b/pages/calculos/calcular_fertilidad.html
@@ -524,6 +524,7 @@
   <script src="../../assets/js/calculos/fertilidad.js"></script>
   <script src="../../assets/js/animaciones/tambaleo.js"></script>
   <script src="../../assets/js/localstorage.js"></script>
+  <script src="../../assets/js/include/include.js"></script>
   
 
 </body>
