--- a/pages/calculos/calcular_textura.html
+++ b/pages/calculos/calcular_textura.html
@@ -432,7 +432,7 @@
   <script src="../../assets/js/config.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/intro.js/4.2.2/intro.min.js"></script>
   <script src="../../assets/js/instrucciones/intro_textura.js"></script>
-  <script src="../../assets/js/include.js"></script>
+  <script src="../../assets/js/include/include.js"></script>
   <script>
     // Función para mostrar el div durante 4 segundos
     function mostrarDivTemporal() {
