--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
 
 
 <header class="header-2">
-  <div class="page-header min-vh-100 relative" style="background-image: url('assets/img/suelo.webp');">
+  <div class="page-header min-vh-100 relative" style="background-image: url('assets/img/bg-arboles.jpg');;background-position-y:50%;">
     <span class="mask bg-gradient-dark opacity-6"></span>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center mx-auto my-auto">
-          <h3 class="lead mb-4 text-white opacity-8">Cuidemos el medio ambiente 🍃</h4>
-          <h2  class="text-white">Clasificar los suelos es esencial para determinar su capacidad productiva.</h1>
+          <h3 class="lead mb-4 text-white" style="text-shadow:1px 1px 2px black, 0 0 1em rgb(0, 0, 0)">Cuidemos el medio ambiente 🍃</h4>
+          <h2  class="text-white" style="text-shadow:1px 1px 2px black, 0 0 1em rgb(0, 0, 0)">Clasificar los suelos es esencial para determinar su capacidad productiva.</h1>
           <a href="#play"><button class="btn bg-gradient-success text-white">Explorar</button></a>
           
         </div>
